--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -44,3 +40,15 @@
 .read-the-docs {
   color: #888;
 }
+*/
+
+/* =============================================== */
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  top: 2.5rem;
+  padding-top: 60px;
+  z-index: 10;
+} 
