--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -92,3 +92,17 @@
         /* Other mobile-specific styling, if needed */
       }
   }
+
+/* Media query for mobile screens */
+@media only screen and (max-width: 911px) { /* Adjustable breakpoint as needed */
+    .circle-sketch-highlight:before {
+      /* Mobile-specific styles */
+      width: 190%; /* Increase width to 190% */
+      /* Other mobile-specific styling, if needed */
+    }
+    .circle-sketch-highlight:after {
+        /* Mobile-specific styles */
+        width: 190%; /* Increase width to 190% */
+        /* Other mobile-specific styling, if needed */
+      }
+  }
