--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,15 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.dummy-div {
-    background-color: blueviolet;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
-    width: 150px;
-    text-align: center;
-    font-weight: bold;
-}
 
 .bg-pink {
     background-color: rgb(203, 176, 228);
@@ -36,6 +27,8 @@
     top:0.1em;
     padding:0 0.25em;
 }
+
+/* -------------- TITLE HIGHLIGHT --------------  */
 
 .circle-sketch-highlight{
     position:relative;
@@ -107,6 +100,8 @@
       }
   }
 
+/* -------------- GLOBAL SCROLL BARS --------------  */
+
   /* width */
 .styled-scroll-1::-webkit-scrollbar {
   width: 4px;
@@ -150,9 +145,6 @@
   .styled-scroll-none::-webkit-scrollbar-thumb:hover {
     background: #555;
   }
-
-
-  /* ========================== */
 
   * {
     scroll-behavior: smooth;
