moe to about me section

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -21,6 +21,10 @@
     font-family: CourierPrime-Regular;
     src: url(./assets/fonts/CourierPrime-Regular.ttf);
   }
+
+  body {
+    font-family: CourierPrime-Regular;
+  }
 }
 
 /* ---------------- Colors ------------------ */
